--- a/test/fixtures/playlists.yml
+++ b/test/fixtures/playlists.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: MyString
-  valence: MyString
+  name: hipHop
+  spotify_id: "123423"
+  owner: adamx
 
 two:
-  user_id: MyString
-  valence: MyString
+  name: rock
+  spotify_id: "2345"
+  owner: jorge
